# movie-rating-system

./: .env.example  .gitignore  README.md  docker-compose.yml  postman_collection.json  pyproject.toml
alembic/: env.py
alembic/versions/: 3978e4e538a2_add_description_to_movies_table.py  4af839b16182_initial_migration.py  66576f467d9b_change_movierating_created_at_to_rated_.py  8f5111e652b6_fix_models_relation.py
app/: config.py  logging_config.py  main.py
app/controller/: __init__.py  movie.py  rating.py
app/db/: __init__.py  session.py
app/exceptions/: __init__.py  base.py  movie.py  rating.py
app/models/: __init__.py  director.py  genre.py  movie.py  movie_rating.py
app/repositories/: __init__.py  dependencies.py  director.py  genre.py  movie.py  movie_rating.py
app/schemas/: __init__.py  director.py  genre.py  movie.py  rating.py  response.py
app/services/: __init__.py  dependencies.py  movie.py  rating.py
app/utils/: __init__.py  response.py
scripts/: seed_check.py  seeddb.sql
